[API] Add user paths
* add paths for users
* implement GET request for users using FireBase
